    for compressed kernels (LP: #1632473).

 -- Cyril Brulebois <kibi@debian.org>  Thu, 27 Oct 2016 22:09:07 +0200

debian-installer (20160630~bpo8+1) jessie-backports; urgency=medium

  [ Cyril Brulebois (DEBAMAX) ]
  * Prepare building d-i with bits from backports. Based on:
    https://lists.debian.org/debian-boot/2014/01/msg00407.html

 -- Cyril Brulebois <cyril@debamax.com>  Tue, 23 Aug 2016 19:03:38 +0200

debian-installer (20160630) unstable; urgency=medium

  [ Cyril Brulebois ]
  * Make version build-deps use -1~ version suffixes instead of -1 to
    make lintian happy (build-depends-on-1-revision tag)
  * Bump Linux kernel version from 4.5.0-2 to 4.6.0-1
  * Update translation-status for the release.

  [ Aurelien Jarno ]
  * Add mipsel octeon images.
  * Drop mipsel cobalt support.
  * Add mips64el support.
  * Drop mipsel/loongson-2e and mipsel/loongson-2f images.

  [ Samuel Thibault ]
  * Produce two beeps when booted with grub instead of one, so the user knows
    he has to use the grub way to edit entries.
  * Bump gnumach version to 1.7.

  [ Roger Shimizu ]
  * ARM: orion5x: Add a few Linkstation devices to netboot target.
    Those devices are still in network-console target.
  * ARM: orion5x: Change initrd to XZ compression for all orion5x-based
    Linkstation devices.

  [ Steven Chamberlain ]
  * Bump kfreebsd (kernel) version to 10.3.

  [ Martin Michlmayr ]
  * Use XZ compression for QNAP on Kirkwood due to size restrictions.
  * Mark fb-modules as required for armhf's netboot-gtk flavour.
  * Add u-boot config script for Seagate Personal Cloud and Seagate NAS.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2016 00:56:34 +0200

debian-installer (20160516) unstable; urgency=low

  [ Martin Michlmayr ]
  * Provide u-boot images for OpenRD.
  * Remove mipsel/bcm947xx config file.
  * Use gpgv1.4-udeb for orion5x network-console so the ramdisk fits
    in flash on QNAP TS-x09 devices.