@@ -8,14 +8,14 @@ SUITE=$(shell LC_ALL=C dpkg-parsechangelog | grep ^Distribution: | cut -d ' ' -f
 
 # Daily builds vs. uploads to unstable:
 ifeq (${SUITE},UNRELEASED)
-USE_UDEBS_FROM=unstable
-TRANSSTATUS=
-BOOTMENU_BEEP=n
+	USE_UDEBS_FROM=unstable
+	TRANSSTATUS=
+	BOOTMENU_BEEP=n
 else
-USE_UDEBS_FROM=buster
-USE_PROPOSED_UPDATES=0
-TRANSSTATUS=translation-status
-BOOTMENU_BEEP=y
+	USE_UDEBS_FROM=buster
+	USE_PROPOSED_UPDATES=0
+	TRANSSTATUS=translation-status
+	BOOTMENU_BEEP=y
 endif
 
 # Adjust for non-released ports if needed:
