@@ -308,6 +308,7 @@ debian-installer (20160630~bpo8+1) jessie-backports; urgency=medium
   [ Cyril Brulebois (DEBAMAX) ]
   * Prepare building d-i with bits from backports. Based on:
     https://lists.debian.org/debian-boot/2014/01/msg00407.html
+  * debian/rules: Improve readability.
 
  -- Cyril Brulebois <cyril@debamax.com>  Tue, 23 Aug 2016 19:03:38 +0200
 
